Fixed Spacing

--- a/styles.css
+++ b/styles.css
@@ -19,19 +19,21 @@ p {
 }
 
 .logoubiuv {
-    margin: 10vh auto 20vh auto;
+    margin: 10vh auto 12.5vh auto;
     text-align: center;
 }
 
 .logouv {
-    height: 15vh;
-    max-width: 300px;
+    height: 24vh;
+    max-width: 100vw;
 }
 
 .logoubiuv h1 {
+    margin-top: 0.5vh;
     text-align: center;
     font-family: Poppins;
     font-size: 5vh;
+    font-weight: 800;
 }
 
 .centerbutton {
